// Vitest Snapshot v1

exports[`calculate simulations-impot-société > bénéfices 1`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 0
Notifications affichées : entreprise . imposition . IS . information sur le report de déficit"
`;

exports[`calculate simulations-impot-société > bénéfices 2`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 0"
`;

exports[`calculate simulations-impot-société > bénéfices 3`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 300"
`;

exports[`calculate simulations-impot-société > bénéfices 4`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 3000"
`;

exports[`calculate simulations-impot-société > bénéfices 5`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 45762"
`;

exports[`calculate simulations-impot-société > bénéfices 6`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 495762"
`;

exports[`calculate simulations-impot-société > bénéfices 7`] = `
"entreprise . imposition . IS . contribution sociale: 139750
entreprise . imposition . IS . montant: 4995762"
`;

exports[`calculate simulations-impot-société > prorata temporis 1`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 245762"
`;

exports[`calculate simulations-impot-société > prorata temporis 2`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 277936"
`;

exports[`calculate simulations-impot-société > prorata temporis 3`] = `
"entreprise . imposition . IS . contribution sociale: 0
entreprise . imposition . IS . montant: 272981"
`;
